# hypr-rdp

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
pkg/aur/: PKGBUILD
pkg/aur-git/: PKGBUILD
pkg/nix/: package.nix
protocols/: virtual-keyboard-unstable-v1.xml
src/: config.rs  hyprland.rs  main.rs
src/audio/: backend.rs  format.rs  mod.rs  pipewire.rs  routing.rs
src/capture/: damage.rs  dmabuf.rs  frame.rs  mod.rs  scale.rs  wayland.rs
src/capture/wayland/: dmabuf_capture.rs  ext.rs  mod.rs  output.rs  state.rs  wlr.rs
src/clipboard/: backend.rs  formats.rs  mod.rs  wayland.rs
src/display/: geometry.rs
src/egfx/: avc420.rs  avc444.rs  backend.rs  encoder.rs  factory.rs  frame.rs  h264.rs  mod.rs  rdpegfx.rs  rfx.rs  shared.rs  test_support.rs  tests.rs  vaapi.rs  vaapi_sys.rs  vpp.rs
src/input/: keyboard.rs  keymap.rs  layout.rs  mod.rs  rdp.rs  virtual_keyboard.rs  wayland.rs
src/server/: mod.rs  tls.rs
