[package]
name = "hypr-rdp"
version = "0.1.0"
edition = "2021"
description = "Native RDP server for Hyprland"
license = "MIT"

[features]
# Keep the default build software-only so Arch/libva updates do not break
# installation. VA-API can be enabled explicitly with `--features vaapi`.
default = []
vaapi = ["dep:cros-libva"]

[dependencies]
# VA-API hardware encoding (Intel/AMD)
cros-libva = { version = "0.0.13", optional = true }
# RDP server dependencies; pin a known revision for reproducible builds.
ironrdp-server = { git = "https://github.com/MuNeNICK/IronRDP.git", rev = "fd78abd4da074403aa20cb5547bb72354338bbd1", features = ["egfx", "helper"] }
ironrdp-pdu = { git = "https://github.com/MuNeNICK/IronRDP.git", rev = "fd78abd4da074403aa20cb5547bb72354338bbd1" }
ironrdp-egfx = { git = "https://github.com/MuNeNICK/IronRDP.git", rev = "fd78abd4da074403aa20cb5547bb72354338bbd1" }
ironrdp-dvc = { git = "https://github.com/MuNeNICK/IronRDP.git", rev = "fd78abd4da074403aa20cb5547bb72354338bbd1" }
ironrdp-svc = { git = "https://github.com/MuNeNICK/IronRDP.git", rev = "fd78abd4da074403aa20cb5547bb72354338bbd1" }
ironrdp-cliprdr = { git = "https://github.com/MuNeNICK/IronRDP.git", rev = "fd78abd4da074403aa20cb5547bb72354338bbd1" }
ironrdp-rdpsnd = { git = "https://github.com/MuNeNICK/IronRDP.git", rev = "fd78abd4da074403aa20cb5547bb72354338bbd1" }
ironrdp-core = { git = "https://github.com/MuNeNICK/IronRDP.git", rev = "fd78abd4da074403aa20cb5547bb72354338bbd1" }
ironrdp-displaycontrol = { git = "https://github.com/MuNeNICK/IronRDP.git", rev = "fd78abd4da074403aa20cb5547bb72354338bbd1" }
ironrdp-graphics = { git = "https://github.com/MuNeNICK/IronRDP.git", rev = "fd78abd4da074403aa20cb5547bb72354338bbd1" }

# H.264 encoding (OpenH264 software encoder)
openh264 = { version = "0.9", features = ["libloading"] }
yuv = "0.8.14"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
async-trait = "0.1"

# Wayland client
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-scanner = "0.31"

# PipeWire audio capture
pipewire = "0.9"

# System
libc = "0.2"

# TLS auto-cert generation
rcgen = "0.13"

# Clipboard image support (DIB/PNG conversion)
ironrdp-cliprdr-format = { git = "https://github.com/MuNeNICK/IronRDP.git", rev = "fd78abd4da074403aa20cb5547bb72354338bbd1" }

# Config file
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Utilities
anyhow = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
xkbcommon = "0.9.0"
serde_json = "1"
rustls = { version = "0.23", default-features = false }
